tag text added to portfolio items and code improved

--- a/assets/translations/fa-IR.json
+++ b/assets/translations/fa-IR.json
@@ -56,5 +56,7 @@
   "myGithub": "miladhf",
   "english": "انگلیسی",
   "farsi": "فارسی",
-  "language": "زبان"
+  "language": "زبان",
+  "java": "Java",
+  "flutter": "Flutter"
 }
