--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -56,5 +56,7 @@
   "myGithub": "miladhf",
   "english": "English",
   "farsi": "Farsi",
-  "language": "Language"
+  "language": "Language",
+  "java": "Java",
+  "flutter": "Flutter"
 }
