--- a/assets/translations/fa-IR.json
+++ b/assets/translations/fa-IR.json
@@ -60,5 +60,6 @@
   "java": "Java",
   "flutter": "Flutter",
   "adobeXd": "Adobe Xd",
-  "figma": "Figma"
+  "figma": "Figma",
+  "GetX": "GetX"
 }
