experiences tab added

--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -61,5 +61,9 @@
   "flutter": "Flutter",
   "adobeXd": "Adobe Xd",
   "figma": "Figma",
-  "GetX": "GetX"
+  "GetX": "GetX",
+  "viraCompany": "Pishgamvira Company",
+  "viraDescription": "Flutter developer (Remote) \n\n May 2022-until now",
+  "seeWebsite": "View website",
+  "workExperiences": "Experiences"
 }
