--- a/assets/translations/fa-IR.json
+++ b/assets/translations/fa-IR.json
@@ -61,5 +61,9 @@
   "flutter": "Flutter",
   "adobeXd": "Adobe Xd",
   "figma": "Figma",
-  "GetX": "GetX"
+  "GetX": "GetX",
+  "viraCompany": "شرکت پیشگام ویرا",
+  "viraDescription": "برنامه نویس فلاتر (دورکاری) \n\n 1401/3/1-تاکنون",
+  "seeWebsite": "مشاهده وب سایت",
+  "workExperiences": "سوابق کاری"
 }
