main app bar ui changed

--- a/assets/translations/fa-IR.json
+++ b/assets/translations/fa-IR.json
@@ -1,5 +1,5 @@
 {
-  "home": "خانه",
+  "aboutMe": "آشنایی با من",
   "skills": "مهارت ها",
   "portfolio": "نمونه کارها",
   "myName": "میلاد حاصل فروش",
