--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -1,5 +1,5 @@
 {
-  "home": "Home",
+  "aboutMe": "About me",
   "skills": "Skills",
   "portfolio": "Portfolio",
   "myName": "Milad Haselforoush",
