home tab design completed

--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -3,7 +3,7 @@
   "skills": "Skills",
   "portfolio": "Portfolio",
   "myName": "Milad Haselforoush",
-  "myJob": "Flutter and Android developer",
+  "myJob": "Flutter Developer",
   "myDescription": "Flutter and Android developer with 4 years of experience in application design and freelance work",
   "copied": "Copied",
   "generalSkills": "General skills",
