--- a/assets/translations/fa-IR.json
+++ b/assets/translations/fa-IR.json
@@ -3,7 +3,7 @@
   "skills": "مهارت ها",
   "portfolio": "نمونه کارها",
   "myName": "میلاد حاصل فروش",
-  "myJob": "برنامه نویس فلاتر و اندروید",
+  "myJob": "برنامه نویس فلاتر",
   "myDescription": "برنامه نویس فلاتر و برنامه نویس اندروید با زبان java با 4 سال سابقه طراحی اپلیکیشن  و کارهای فریلنسری",
   "copied": "کپی شد",
   "generalSkills": "مهارت های عمومی",
