portfolio data updated

--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -64,7 +64,8 @@
   "figma": "Figma",
   "GetX": "GetX",
   "viraCompany": "Pishgamvira Company",
-  "viraDescription": "Flutter developer (Remote) \n\n May 2022-until now",
+  "viraDescription": "Flutter developer (Remote)",
+  "viraDate": "May 2022-until now",
   "seeWebsite": "View website",
   "workExperiences": "Experiences"
 }
