--- a/assets/translations/fa-IR.json
+++ b/assets/translations/fa-IR.json
@@ -64,7 +64,8 @@
   "figma": "Figma",
   "GetX": "GetX",
   "viraCompany": "شرکت پیشگام ویرا",
-  "viraDescription": "برنامه نویس فلاتر (دورکاری) \n\n 1401/3/1-تاکنون",
+  "viraDescription": "برنامه نویس فلاتر (دورکاری)",
+  "viraDate": "خرداد 1401 تا به امروز",
   "seeWebsite": "مشاهده وب سایت",
   "workExperiences": "سوابق کاری"
 }
